--- a/src/Tools/Makefile
+++ b/src/Tools/Makefile
@@ -2,4 +2,4 @@ CFLAGS = `pkg-config --cflags opencv`
 LIBS = `pkg-config --libs opencv`
 
 ../../build/ImageSegmenter : ImageSegmenter.cpp
-	g++ $(CFLAGS) $(LIBS) -Wall -Wextra -o $@ $< ../GUI/GUI.cpp ../GUI/Draw.cpp ../ImageProcessing/ImageProcessing.cpp -I ../
+	g++ $(CFLAGS) $(LIBS) -Wall -Wextra -pedantic -std=c++11 -o $@ $< ../GUI/GUI.cpp ../GUI/Draw.cpp ../ImageProcessing/ImageProcessing.cpp -I ../
