Replace dirent.h with boost/filesystem.hpp
because dirent.h is not cross-platform.

--- a/src/Tools/CMakeLists.txt
+++ b/src/Tools/CMakeLists.txt
@@ -5,4 +5,4 @@ if(UNIX)
 endif(UNIX)
 
 add_executable (ImageSegmenter ImageSegmenter.cpp)
-target_link_libraries (ImageSegmenter ${OpenCV_LIBS} GUI Draw ImageProcessing)
+target_link_libraries (ImageSegmenter ${OpenCV_LIBS} ${Boost_LIBRARIES} GUI Draw ImageProcessing)
