--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
 project (SignSight)
 find_package (OpenCV REQUIRED)
+find_package (Boost REQUIRED filesystem system)
 
 if (UNIX)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
@@ -15,4 +16,4 @@ add_subdirectory (ImageProcessing)
 add_subdirectory (Tools)
 
 add_executable (SignSight SignSight.cpp)
-target_link_libraries (SignSight ${OpenCV_LIBS} GUI Draw ImageProcessing)
+target_link_libraries (SignSight ${OpenCV_LIBS} ${Boost_LIBRARIES} GUI Draw ImageProcessing)
